# my-tube-auth-service

./: .dockerignore  .env.docker.example  .env.example  .env.local.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
migrations/: env.py
migrations/versions/: 20260617_0001_create_identity_tables.py
src/api/: schemas.py  server.py
src/api/exception_handlers/: __init__.py  identity_already_exists_handler.py  invalid_credentials_handler.py  unknown_role_handler.py  user_not_found_handler.py
src/api/routes/: auth.py
src/application/: __init__.py
src/application/commands/: __init__.py
src/application/commands/login/: __init__.py  command.py  command_handler.py
src/application/commands/provision_identity/: __init__.py  command.py  (+1 more)
src/domain/: __init__.py
src/domain/aggregates/: __init__.py  user_aggregate.py
src/domain/entities/: __init__.py  identity.py  permission.py  role.py  user.py
src/domain/exceptions/: __init__.py  identity_already_exists_exception.py  invalid_credentials_exception.py  unknown_role_exception.py  user_not_found_exception.py
src/domain/policies/: __init__.py  role_catalog.py
src/domain/repositories/: __init__.py  identity_repository.py  user_repository.py
src/domain/services/: __init__.py  password_hashing_service.py  token_service.py
src/domain/value_objects/: __init__.py  channel_access.py  email.py  operation_result.py  password.py  permission.py  role.py  token.py
src/infrastructure/: __init__.py
src/infrastructure/database/: __init__.py  connection.py  tables.py
src/infrastructure/repositories/: __init__.py  factory.py  in_memory_identity_repository.py  in_memory_user_repository.py  postgres_identity_repository.py
src/infrastructure/services/: __init__.py  bcrypt_password_hashing_service.py  jwt_token_service.py
tests/api/: test_auth_routes.py
tests/domain/aggregates/: __init__.py  test_user_aggregate.py
tests/domain/entities/: test_identity.py  test_user.py
tests/domain/value_objects/: test_email.py  test_operation_result.py  test_password.py  test_token.py
tests/infrastructure/database/: test_connection.py  test_tables.py
tests/infrastructure/repositories/: test_in_memory_identity_repository.py  test_in_memory_user_repository.py  test_postgres_identity_repository.py  test_repository_factory.py
tests/infrastructure/services/: test_bcrypt_password_hashing_service.py  test_jwt_token_service.py
(+10 files in other folders)
