[project]
name = "my-tube-auth-service"
version = "0.1.0"
description = ""
authors = [{ name = "Bohdan Butko", email = "bohdanbutko@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "pydantic>=2.7.1,<3.0.0",
    "passlib>=1.7.4,<2.0.0",
    "uvicorn>=0.27.1,<0.28.0",
    "python-jose>=3.3.0,<4.0.0",
    "python-multipart>=0.0.9,<0.0.10",
    "pyjwt>=2.8.0,<3.0.0",
    "bcrypt>=4.1.2,<5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "ruff>=0.11.0,<0.12.0",
    "ty>=0.0.37",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
# Temporary filters for FastAPI/Starlette deprecation noise on Python 3.14.
# Remove once dependencies stop using asyncio.iscoroutinefunction.
filterwarnings = [
    "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16; use inspect.iscoroutinefunction\\(\\) instead:DeprecationWarning:fastapi\\.routing",
    "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16; use inspect.iscoroutinefunction\\(\\) instead:DeprecationWarning:starlette\\._utils",
]
